--- a/task_1/styles/style.css
+++ b/task_1/styles/style.css
@@ -58,10 +58,13 @@
     .address {
         display: flex;
         flex-wrap: wrap;
+        margin-left: 20px;
         width: 90%;
     }
+
     .address p {
-        margin: 15px 5px 0 0;
+        margin: 15px 10px 0 10px;
+        min-width: 160px;
     }
 
     .drop-down-address {
@@ -73,6 +76,9 @@
     }
     .drop-down-address p:last-child {
         color:  rgba(0, 0, 0, 0.4);
+    }
+    .drop-down-address:hover {
+        cursor: pointer;
     }
 }
 
