--- a/task_1/styles/style.css
+++ b/task_1/styles/style.css
@@ -40,6 +40,7 @@
         flex-direction: column-reverse;
         align-items: center;
         width: 100%;
+        padding-bottom: 20px;
     }
     .container {
         width: 85%;
