--- a/task_2/styles/style.css
+++ b/task_2/styles/style.css
@@ -87,8 +87,6 @@
     .table-row:first-child .table-cell {
         padding: 15px 20px 0;
     }
-  
-
     /**** DELIVERY ******/
     .delivery-type p {
         margin-top: 5px;
@@ -156,7 +154,7 @@
         display: table;
         width: 100%;
     }
-    .table:not(:last-child) {
+    div:not(:last-of-type) .table {
         border-bottom: 2px solid rgba(0, 0, 0, 0.295);
         padding-bottom: 10px;
     }
@@ -175,32 +173,31 @@
     }
     .delete {
         text-align: right;
-    } 
+    }
     .total {
         text-align: right;
     }
-
     /***** MOBILE PRODUCTS *******/
     table {
         width: 100%;
         margin-top: 20px;
-    } 
+    }
     .product-name {
         padding-left: 8px;
     }
-
     /***** MOBILE HIDDEN *****/
-    .desktop-table .sum2, 
-    .desktop-table .price-discount, 
-    .delivery-type p, 
-    .desktop-table .delete, 
-    .desktop-table .picture, 
+    .desktop-table .sum2,
+    .desktop-table .price-discount,
+    .delivery-type p,
+    .desktop-table .delete,
+    .desktop-table .picture,
     .desktop-table .name {
         display: none;
     }
-
 }
+
 /****** PRODUCT IMAGE ********/
+
 .product-img {
     display: block;
     min-height: 0px;
@@ -288,7 +285,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 /********** DELETE BUTTON **********/
 
-.delete-elem, .delete-mobile {
+.delete-elem,
+.delete-mobile {
     outline: none;
     border: none;
     -webkit-appearance: none;
