--- a/task_2/styles/style.css
+++ b/task_2/styles/style.css
@@ -29,6 +29,8 @@
         border: 1px solid transparent;
         border-bottom: 1px solid hsla(0, 0%, 0%, 0.5);
         border-radius: 0;
+        -webkit-appearance: none;
+        -webkit-border-radius: 0;
         background: white;
     }
     input[type="text"]:focus {
