--- a/task_2/styles/style.css
+++ b/task_2/styles/style.css
@@ -42,6 +42,8 @@
         height: 37px;
         padding: 10px 50px;
         border-radius: 0;
+        -webkit-appearance: none;
+        -webkit-border-radius: 0;
         border: 1px solid hsla(0, 0%, 0%, 0.5);
         background: white;
     }
