--- a/task_2/styles/style.css
+++ b/task_2/styles/style.css
@@ -29,8 +29,6 @@
         border: 1px solid transparent;
         border-bottom: 1px solid hsla(0, 0%, 0%, 0.5);
         border-radius: 0;
-        -webkit-appearance: none;
-        -webkit-border-radius: 0;
         background: white;
     }
     input[type="text"]:focus {
@@ -42,8 +40,6 @@
         height: 37px;
         padding: 10px 50px;
         border-radius: 0;
-        -webkit-appearance: none;
-        -webkit-border-radius: 0;
         border: 1px solid hsla(0, 0%, 0%, 0.5);
         background: white;
     }
@@ -202,6 +198,15 @@
 
 /****** PRODUCT IMAGE ********/
 
+textarea,
+input.text,
+input[type="text"],
+input[type="button"],
+input[type="submit"],
+.input-checkbox {
+-webkit-appearance: none;
+border-radius: 0;
+}
 .product-img {
     display: block;
     min-height: 0px;
