--- a/task_2/styles/style.css
+++ b/task_2/styles/style.css
@@ -56,7 +56,7 @@
         width: 100%;
         border-top: 2px solid rgba(0, 0, 0, 0.3);
     }
-    .table:not(:first-of-type) .table-header {
+    div:not(:first-of-type) .table-header {
         visibility: hidden;
         height: 0;
         font-size: 0;
@@ -64,7 +64,7 @@
         padding: 0;
         line-height: 0;
     }
-    .table:not(:first-of-type) .table-header .table-cell {
+    div:not(:first-of-type) .table-header .table-cell {
         margin: 0;
         padding-top: 0;
         line-height: 0;
